javadoc ListaDiArticoli